Write the network class

--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -4,51 +4,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### File for all of the considered Networks\n",
-    "1 - Braess Network "
+    "# The network class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Braess_Network(object):\n",
-    "    return "
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class network:\n",
-    "  # add a method that gives the travel time\n",
-    "    def __init__(self, paths, links):\n",
-    "        self.paths = paths\n",
-    "        self.links = links\n",
+    "    def __init__(self, network_name, nb_veh):\n",
+    "        \"\"\"\n",
+    "        load the network which correspond to the network_name\n",
+    "        define the nb_veh as the nb_veh\n",
+    "        \"\"\"\n",
+    "        if network_name == \"Braess\":\n",
+    "            self.__graph = np.array([[0, 0, 1, 1, 0.1, 0, 0, 0],\n",
+    "                              [1, 0, 2, 2, 0, 0, 0, 0],\n",
+    "                              [2, 1, 2, 0.25, 0, 0, 0, 0],\n",
+    "                              [3, 1, 3, 2, 0, 0, 0, 0],\n",
+    "                              [4, 2, 3, 1, 0.1, 0, 0, 0]])\n",
+    "            self.__delta = np.array([[1,0,1,0,1],\n",
+    "                                     [1,0,0,1,0],\n",
+    "                                     [0,1,0,0,1]])\n",
+    "            self.__flow_per_veh = 10 / nb_veh\n",
+    "            \n",
+    "            \"\"\"\n",
+    "            from nb_veh and the intern demand define the number of flow that each veh represent\n",
+    "            also define __nb_paths to give it to the Env\n",
+    "            \"\"\"\n",
+    "            \n",
+    "        else:\n",
+    "            raise Exception(\"The network name is not known! The only options are: \\'Braess\\'. This error was raise in the instancation of the class network\")\n",
     "    \n",
-    "    def update(self):\n",
-    "        for link in self.links:\n",
-    "            link.update_travel_time()\n",
-    "        for path in self.paths:\n",
-    "            path.update_travel_time()\n",
-    "            \n",
-    "    def update_av(self, avs):\n",
-    "        for path in self.paths:\n",
-    "            path.update_flow(0)\n",
-    "        for av in avs:\n",
-    "            av.path.add_flow(av.flow)\n",
-    "        self.update()\n",
-    "        for av in avs:\n",
-    "            av.give_reward()\n",
-    "            \n",
-    "    def reset(self):\n",
-    "      for path in self.paths:\n",
-    "        path.update_flow(0)\n",
-    "      self.update()"
+    "    def __travel_time(self, f):\n",
+    "        f = f * self.__flow_per_veh\n",
+    "        g = self.__graph\n",
+    "        return g[:,3] + g[:,4]*f + g[:,5]*(f**2) + g[:,6]*(f**3) + g[:,7]*(f**4)\n",
+    "    \n",
+    "    def __marginal_cost(self, f):\n",
+    "        g = self.__graph\n",
+    "        return g[:,4] + 2*g[:,5]*f + 3*g[:,6]*(f**2) + 4*g[:,7]*(f**3)\n",
+    "    \n",
+    "    @property\n",
+    "    def nb_paths(self):\n",
+    "        return self.__delta.shape[0]\n",
+    "    \n",
+    "    def update_flow_from_dict(self, paths_flow_dict):\n",
+    "        self.__path_flow = np.zeros(self.__delta.shape[0])\n",
+    "        for p in paths_flow_dict.keys():\n",
+    "            assert type(p) == int and p > -1 and p < self.nb_paths\n",
+    "            self.__path_flow[p] = paths_flow_dict[p]\n",
+    "        self.__update_travel_time_and_marginal_cost()\n",
+    "        \n",
+    "    def __update_travel_time_and_marginal_cost(self):\n",
+    "        f = self.__delta.T @ self.__path_flow\n",
+    "        tt_f = self.__travel_time(f)\n",
+    "        mc_f = self.__marginal_cost(f)\n",
+    "        self.__path_travel_time = self.__delta @ tt_f\n",
+    "        \n",
+    "    def travel_time(self, p):\n",
+    "        assert type(p) == int and p > -1 and p < self.nb_paths\n",
+    "        return self.__path_travel_time[p]\n",
+    "\n",
+    "    # marginal_cost = d[t(x_e)]/d[x_e]\n",
+    "    def marginal_cost(self, p):\n",
+    "        assert type(p) == int and p > -1 and p < self.nb_paths\n",
+    "        return self.__marginal_cost[p]"
    ]
   },
   {
@@ -56,179 +88,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class path:\n",
-    "    \"\"\"\n",
-    "    Notes: \n",
-    "     - We should add a method that \"adds a car/updates the flow\" to a path. \n",
-    "       This should include the update_travel_time method.\n",
-    "     - The travel time of each path shouldn't start at 0, since each path always has some base travel time.\n",
-    "       Have the initial travel times of the path be when the congestion is 0. \n",
-    "     - When you \"update the travel time\", add what the travel time of each road would be given\n",
-    "       the path's current flow.\n",
-    "       Maybe each link in the path should only have a function that calculates it's travel time\n",
-    "       given a flow on that link.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, name, links):\n",
-    "        self.__name = name\n",
-    "        # self.__travel_time = 0 # the travel time of the paths\n",
-    "        self.__flow = 0 # the flow on the paths\n",
-    "        self.__links = links # the paths using this link\n",
-    "        for link in links:\n",
-    "            link.add_path(self)\n",
-    "    \n",
-    "    def get_flow(self):\n",
-    "        return self.__flow\n",
-    "    \n",
-    "    def update_flow(self, f):\n",
-    "        self.__flow = f\n",
-    "    \n",
-    "    def add_flow(self, f):\n",
-    "        self.__flow += f\n",
-    "      \n",
-    "    # add the marginal cost to see if you converge to the social optimum\n",
-    "    def get_travel_time(self):\n",
-    "        return self.__travel_time\n",
-    "    \n",
-    "    def update_travel_time(self):\n",
-    "        self.__travel_time = 0\n",
-    "        for link in self.__links:\n",
-    "            self.__travel_time += link.get_travel_time()\n",
-    "            \n",
-    "    def __str__(self):\n",
-    "        return self.__name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class link:\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    def __init__(self, name, a0, a1):\n",
-    "        self.__name = name\n",
-    "        # self.__travel_time = 0 # the travel time of the link\n",
-    "        # self.__flow = 0 # the flow on the link\n",
-    "        self.__paths = [] # the paths using this link\n",
-    "        self.__a0 = a0\n",
-    "        self.__a1 = a1\n",
-    "        \n",
-    "    def add_path(self, path):\n",
-    "        self.__paths.append(path)\n",
-    "        \n",
-    "    def get_travel_time(self):\n",
-    "        return self.__travel_time\n",
-    "    \n",
-    "    def update_flow(self):\n",
-    "        self.__flow = 0\n",
-    "        for path in self.__paths:\n",
-    "            self.__flow += path.get_flow()\n",
-    "    \n",
-    "    def update_travel_time(self):\n",
-    "        self.update_flow()\n",
-    "        self.__travel_time = self.__a0 + self.__a1 * self.__flow\n",
-    "        \n",
-    "    def __str__(self):\n",
-    "        return self.__name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ab = link('ab', 1, 1/100)\n",
-    "ac = link('ac', 2, 0)\n",
-    "bc = link('bc', 0.25, 0)\n",
-    "bd = link('bd', 2, 0)\n",
-    "cd = link('cd', 1, 1/100)\n",
-    "\n",
-    "abcd = path('abcd', [ab, bc, cd])\n",
-    "abd = path('abd', [ab, bd])\n",
-    "acd = path('acd', [ac, cd])\n",
-    "\n",
-    "braess = network([abd, acd, abcd], [ab, ac, bc, bd, cd])\n",
-    "\n",
-    "braess.update()\n",
-    "\n",
-    "#Nash equilibrium\n",
-    "abcd.update_flow(50)\n",
-    "abd.update_flow(25)\n",
-    "acd.update_flow(25)\n",
-    "braess.update()\n",
-    "print([path.get_travel_time() for path in braess.paths])\n",
-    "\n",
-    "#social optimum\n",
-    "abcd.update_flow(0)\n",
-    "abd.update_flow(50)\n",
-    "acd.update_flow(50)\n",
-    "braess.update()\n",
-    "print([path.get_travel_time() for path in braess.paths])\n",
-    "\n",
-    "## change this\n",
-    "# 1. to do Igor experiment \n",
-    "class autonomous_vehicle:\n",
-    "    # p = 0.5\n",
-    "    def __init__(self, name, flow):\n",
-    "        self.name = name\n",
-    "        self.path = None\n",
-    "        self.reward = 0\n",
-    "        self.flow = flow\n",
-    "    \n",
-    "    def path_choice(self, path):\n",
-    "        if self.path == None:\n",
-    "            self.path = path\n",
-    "        # the following condition makes the system converges toward Nash\n",
-    "        # change this condition to make an faster convergence toward Nash\n",
-    "        p = abs(self.path.get_travel_time() - path.get_travel_time()) / self.path.get_travel_time()\n",
-    "        self.path = (path if np.random.rand() < p else self.path)\n",
-    "    \n",
-    "    def give_reward(self):\n",
-    "        # add here a NN which choose the path given the reward\n",
-    "        self.reward = - self.path.get_travel_time()\n",
-    "        \n",
-    "av1 = autonomous_vehicle('1', 25)\n",
-    "av2 = autonomous_vehicle('2', 25)\n",
-    "av3 = autonomous_vehicle('3', 25)\n",
-    "av4 = autonomous_vehicle('4', 25)\n",
-    "\n",
-    "avs = [av1, av2, av3, av4]\n",
-    "\n",
-    "braess.reset()\n",
-    "\n",
-    "for i in range(100):\n",
-    "    best_path = [x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths],  key=lambda tup: tup[0])][0]\n",
-    "    #print([(str(path), path.flow, path.get_travel_time()) for path in braess.paths])\n",
-    "    #print(av2.p)\n",
-    "    for av in avs:\n",
-    "        av.path_choice(best_path)\n",
-    "\n",
-    "    braess.update_av(avs)\n",
-    "    \n",
-    "print([str(av.path) for av in avs])\n",
-    "print([(str(path), path.get_flow(), path.get_travel_time()) for path in braess.paths])\n",
-    "\n",
-    "# Create the roads\n",
-    "ab = link('ab', 1, 1/100)\n",
-    "ac = link('ac', 2, 0)\n",
-    "bc = link('bc', 0.25, 0)\n",
-    "bd = link('bd', 2, 0)\n",
-    "cd = link('cd', 1, 1/100)\n",
-    "roads = [ab, ac, bc, bd, cd]\n",
-    "\n",
-    "# Create the possible routes\n",
-    "abcd = path('abcd', [ab, bc, cd])\n",
-    "abd = path('abd', [ab, bd])\n",
-    "acd = path('acd', [ac, cd])\n",
-    "paths = [abd, acd, abcd]\n",
-    "\n",
-    "# Put the roads and the routes in a network\n",
-    "town = network(paths, links)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -247,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   },
   "widgets": {
    "state": {},
