--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "        return g[:,3] + g[:,4]*f + g[:,5]*(f**2) + g[:,6]*(f**3) + g[:,7]*(f**4)\n",
     "    \n",
     "    def __marginal_cost(self, f):\n",
+    "        f = f * self.__flow_per_veh\n",
     "        g = self.__graph\n",
     "        return g[:,4] + 2*g[:,5]*f + 3*g[:,6]*(f**2) + 4*g[:,7]*(f**3)\n",
     "    \n",
@@ -72,6 +73,7 @@
     "        tt_f = self.__travel_time(f)\n",
     "        mc_f = self.__marginal_cost(f)\n",
     "        self.__path_travel_time = self.__delta @ tt_f\n",
+    "        self.__path_marginal_cost = self.__delta @ mc_f\n",
     "        \n",
     "    def travel_time(self, p):\n",
     "        assert type(p) == int and p > -1 and p < self.nb_paths\n",
@@ -80,7 +82,66 @@
     "    # marginal_cost = d[t(x_e)]/d[x_e]\n",
     "    def marginal_cost(self, p):\n",
     "        assert type(p) == int and p > -1 and p < self.nb_paths\n",
-    "        return self.__marginal_cost[p]"
+    "        return self.__path_marginal_cost[p]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = network(\"Braess\", 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.update_flow_from_dict({0:2,1:1,2:1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.75"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.travel_time(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.marginal_cost(1)"
    ]
   },
   {
